loopfor.LoopFor.scala.error
Compilation error:
LoopFor:3: error: not found: value OverBaggle
  if (!OverBaggle()) {forward ; compteur +=1 }
       ^LoopFor:3: error: ambiguous reference to overloaded definition,
both method forward in class LoopFor of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
  if (!OverBaggle()) {forward ; compteur +=1 }
                      ^