loopfor.LoopFor.scala.code
var compteur = 0
for (i <- 1 to 8) {
  if (!OverBaggle()) {forward ; compteur +=1 }
  else forward()
}
pickupBaggle()
for (i <- 1 to compteur) {
  backward() }
dropBaggle()